# gutBrainIBS

./: .gitignore  BUNDLE_CONTENTS.txt  MATERIALS_AND_METHODS.md  PUBLISH_SCOPE.md  README.md  Snakefile  pyproject.toml
config/: config.smoke.yaml  config.yaml  gwas_manifest.smoke.yaml  gwas_manifest.yaml  traits.smoke.yaml  traits.yaml
envs/: environment.yml
profiles/windows-default/: config.yaml
profiles/windows-safe/: config.yaml
profiles/windows-stable/: config.yaml
src/pipeline/: assemble_results.py  bidirectional_mr.py  build_figures.py  build_presentation_assets.py  coloc_colon_and_brain.py  coloc_sensitivity.py  filter_significant_eqtl.py  genetic_correlation.py  gwas_harmonization.py  harmonization_sensitivity.py  harmonize_variants.py  heterogeneity_colon.py  ingest_eqtl_brain.py  ingest_eqtl_colon_local.py  mr_sensitivity.py  parse_eqtl_to_parquet.py  pathway_enrichment.py  run_control.py  run_managed.py  run_sensitivity.py  scrna_support_colon.py  shared_specific_colon.py  validate_inputs.py
src/utils/: duckdb_utils.py  genetics.py  io.py  stats.py
tests/: test_cache_freshness.py  test_genetics.py  test_stats.py  test_workflow_contract.py
workflow/rules/: pipeline.smk
